# merkle-distribution

./: Anchor.toml  Cargo.toml  GCPNpgMaHU9xmziq2CpvdzBmBeAYYLMaEuLCYyViRC15.json  POC_SUMMARY.md  README.md  TEST_RESULTS.md  package.json  test-merkle.js
programs/merkle-distribution/: Cargo.toml
programs/merkle-distribution/src/: lib.rs
programs/merkle-distributor/src/: lib.rs
programs/merkle-distributor/src/instructions/: new_claim.rs  new_distributor.rs
programs/merkle-distributor/src/state/: merkle_distributor.rs
tests/: merkle-distribution.ts  merkle-tree.ts  test-hash.ts
verify/src/: lib.rs
