[workspace]
members = [
    "programs/*",
    "merkle-tree",
    "verify"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/mohtashimnawaz/merkle-distribution"

[workspace.dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
bytemuck = "1.14.0"
csv = "1.3.0"
fast-math = "0.1"
hex = "0.4.3"
indexmap = "2.1.0"
jito-merkle-verify = { path = "verify" }
rand = "0.8.5"
serde = "1.0.137"
serde_json = "1.0.102"
solana-program = "=1.16.16"
solana-sdk = "=1.16.16"
solana-security-txt = "1.1.1"
thiserror = "1.0.50"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
